--- a/source/sass/blocks/form-order.scss
+++ b/source/sass/blocks/form-order.scss
@@ -14,4 +14,7 @@
   .bar {
     grid-column: 1/3;
   }
+  .form__add-file {
+    margin-bottom: 10px;
+  }
 }
