--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -14,6 +14,7 @@
   }
 
   &__content {
+    max-width: 780px;
     display: flex;
     flex-direction: column;
     padding: 10.3rem 0;
