--- a/source/sass/components/bar.scss
+++ b/source/sass/components/bar.scss
@@ -1,5 +1,8 @@
 .bar {
   margin-bottom: 1rem;
+  @include vp--767 {
+    width: 100%;
+  }
   &__wrapper {
     display: flex;
     flex-direction: column;
