--- a/source/sass/components/custom-select.scss
+++ b/source/sass/components/custom-select.scss
@@ -27,17 +27,38 @@
   }
 
   &__btn {
-    display: flex;
+    //display: flex;
     align-items: center;
-    padding: 1.2rem 1rem;
-    height: 100%;
+    padding: 1.2rem 2rem 1.2rem 1rem;
+    //height: 100%;
+    height: 48px;
     font-size: 1.8rem;
     font-weight: 400;
     color: $color-text-dark-grey;
     background-color: rgba(255, 255, 255, 0.85);
     border: 0.1rem solid $color-default-white;
     border-radius: 3px;
+    overflow: hidden;
     transition: color $trans-default;
+
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    display: block;
+    max-width: 370px;
+    width: 100%;
+    @include vp--1279 {
+      max-width: 356px;
+    }
+    @include vp--1023 {
+      max-width: 297.34px;
+      font-size: 1.6rem;
+    }
+    @include vp--900 {
+      max-width: 256.33px;
+    }
+    @include vp--767 {
+      max-width: 100%;
+    }
   }
 
   &__dropdown {
