--- a/source/sass/components/form.scss
+++ b/source/sass/components/form.scss
@@ -10,6 +10,7 @@
     display: grid;
     gap: 3rem;
     grid-template-columns: repeat(3, 1fr);
+    align-items: center;
     width: 100%;
     margin-bottom: 3rem;
     &:last-of-type {
@@ -26,6 +27,13 @@
       &:last-of-type {
         margin-bottom: 3rem;
       }
+    }
+  }
+
+  &__select,
+  &__input {
+    @include vp--767 {
+      width: 100%;
     }
   }
 
@@ -82,7 +90,7 @@
       align-items: center;
       justify-content: center;
       width: 100%;
-      height: 4.8rem;
+      padding: 9px 10px;
       font-weight: 600;
       font-size: 1.5rem;
       text-transform: uppercase;
