--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -58,6 +58,11 @@
     @content;
   }
 }
+@mixin vp--900 {
+  @media (max-width: $vp--901 - 1) {
+    @content;
+  }
+}
 
 @mixin vp--767 {
   @media (max-width: $vp--768 - 1) {
